Websites/fermiumlabs_com/css/custom.css
/****** PLACE YOUR CUSTOM STYLES HERE ******/
/**
1. Navigator
2. Chart
3. Other stuff
4. Animations
**/
/** 1. Navigator **/



nav.fixed.reveal-nav{
	position:fixed;
	visibility:visible;
	opacity:1;
}
nav.outOfSight{
	transform: translate3d(0, 0px, 0);
  -webkit-transform: translate3d(0, 0px, 0);
  -moz-transform: translate3d(0, 0px, 0);
}
.offscreen-container {
  position: fixed;
  transform: translate3d(400%, 0, 0);
  -webkit-transform: translate3d(400%, 0, 0);
  -moz-transform: translate3d(400%, 0, 0);
  width: 25%;
  top: 0;
  height: 100%;
  min-height: 100vh;
  z-index: 20;
  transition: all 0.4s ease;
  -webkit-transition: all 0.4s ease;
  -moz-transition: all 0.4s ease;
  overflow: hidden;
}
.offscreen-container.reveal-nav {
  transform: translate3d(299.8%, 0, 0);
  -webkit-transform: translate3d(299.8%, 0, 0);
  -moz-transform: translate3d(299.8%, 0, 0);
}
.main-container.reveal-nav {
  transform: translate3d(-25%, 0, 0);
  -webkit-transform: translate3d(-25%, 0, 0);
  -moz-transform: translate3d(-25%, 0, 0);
}


.offscreen-left .main-container.reveal-nav,
.offscreen-left nav.reveal-nav {
  transform: translate3d(-400%, 0, 0) !important;
  -webkit-transform: translate3d(-400%, 0, 0) !important;
  -moz-transform: translate3d(-400%, 0, 0) !important;
}

/**2. Chart**/
.morris-chart text {
  fill: white;
}
.morris-chart path[fill='none'] {
  stroke-width: 3;
}

/**3. Other stuff**/
.policies{
	color: white;
}
.project-link a{
	font-weight: normal;

}
.project-link a:hover{
	font-weight: normal;

}

.row-centered {
    text-align:center;
}
.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
}
.col-fixed {
    /* custom width */
    width:320px;
}
.col-min {
    /* custom min width */
    min-width:320px;
}
.col-max {
    /* custom max width */
    max-width:320px;
}

/** 4.Animations **/
.animate-in {
    -webkit-animation: fadeIn .5s ease-in;
    animation: fadeIn .5s ease-in;
}

.animate-out {
    -webkit-transition: opacity .5s;
    transition: opacity .5s;
    opacity: 0;
}

@-webkit-keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

/** Flip shit **/
/* entire container, keeps perspective */
.flip-container {
	perspective: 1000px;
}
	/* flip the pane when hovered */
	.flip-container:hover .flipper, .flip-container.hover .flipper {
		transform: rotateY(180deg);
	}

.flip-container, .front, .back {
	/*width: 320px;*/
	height: 200px;
}

/* flip speed goes here */
.flipper {
	transition: 0.6s;
	transform-style: preserve-3d;

	position: relative;
}

/* hide back of pane during swap */
.front, .back {
	backface-visibility: hidden;
	-webkit-backface-visibility: hidden;
	position: absolute;
	top: 0;
	left: 0;
}
.front *, .back *{
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;

}
/* front pane, placed above back */
.front {
	z-index: 2;
	/* for firefox 31 */
	transform: rotateY(0deg);
}

/* back, initially hidden pane */
.back {
	transform: rotateY(180deg);
}
.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
	transform: rotateY(180deg);
}



@media all and (max-width: 767px){
.offscreen-container{
	position:fixed;
width: 100%;
}
.offscreen-container.reveal-nav{
transform: translate3d(0,0,0);
-webkit-transform: translate3d(0,0,0);
}
}

@media (max-width: 990px){
.module.widget-handle {
line-height: 60px;
min-height: 60px;
border-top: 0px;
}
}
@-moz-document url-prefix(){
.module.widget-handle {

margin-top:-55px;
}
}
@media screen\9{
	
.module.widget-handle {

margin-top:-55px;
}
}
.bg-fl{
background: -moz-linear-gradient(4.95% 114.83% 35.74deg,rgba(227,24,61,1) 0%,rgba(227,29,60,1) 5.16%,rgba(231,66,53,1) 46.01%,rgba(233,89,49,1) 79.07%,rgba(234,97,47,1) 100%);
  background: -webkit-linear-gradient(35.74deg,rgba(227,24,61,1) 0%,rgba(227,29,60,1) 5.16%,rgba(231,66,53,1) 46.01%,rgba(233,89,49,1) 79.07%,rgba(234,97,47,1) 100%);
  background: -webkit-gradient(linear,4.95% 114.83%,95.64% -15.68%,color-stop(0,rgba(227,24,61,1)),color-stop(0.0516,rgba(227,29,60,1)),color-stop(0.4601,rgba(231,66,53,1)),color-stop(0.7907,rgba(233,89,49,1)),color-stop(1,rgba(234,97,47,1)));
  background: -o-linear-gradient(35.74deg,rgba(227,24,61,1) 0%,rgba(227,29,60,1) 5.16%,rgba(231,66,53,1) 46.01%,rgba(233,89,49,1) 79.07%,rgba(234,97,47,1) 100%);
  background: -ms-linear-gradient(35.74deg,rgba(227,24,61,1) 0%,rgba(227,29,60,1) 5.16%,rgba(231,66,53,1) 46.01%,rgba(233,89,49,1) 79.07%,rgba(234,97,47,1) 100%);
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#E3183D', endColorstr='#EA612F' ,GradientType=0)";
  background: linear-gradient(54.26deg,rgba(227,24,61,1) 0%,rgba(227,29,60,1) 5.16%,rgba(231,66,53,1) 46.01%,rgba(233,89,49,1) 79.07%,rgba(234,97,47,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#E3183D',endColorstr='#EA612F',GradientType=1);
	color: rgba(255,255,255,0.6);
	
}

.bg-fl h5{
	color: rgba(255,255,255,0.6);
}

.bg-fl h5:hover{
	color: rgba(255,255,255,1);
}

a{
	color: rgba(255,255,255,0.6);
}
a:hover{
	color: rgba(255,255,255,1);
}

.social-list li{
	font-size:1.3em;
}

.overlay{
	background: rgba(0,0,0,0.7);
}
.policy-line{
	margin-left:25%;
}


.page-title-3 {
	height:300px;
}

.overlay-frm:before{
	  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background: #eb274a;
  opacity: 0.4;
  z-index: 2;
}

video#bgvid { 
    position: fixed;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -100;
    -ms-transform: translateX(-50%) translateY(-50%);
    -moz-transform: translateX(-50%) translateY(-50%);
    -webkit-transform: translateX(-50%) translateY(-50%);
    transform: translateX(-50%) translateY(-50%);
    background-size: cover; 
}
.vcenter {
    display: inline-block;
    vertical-align: middle;
    float: none;
}
video { 
	display: block; 
}
@media all and (max-width: 767px){   
	.logo{ 
		position: absolute; left: 0; 
	} 
} 

.page-title-3,
.page-title-5 {
  height: 200px;
}
.nav-is-overlay .page-title-5.image-bg:first-child,
.nav-is-overlay.page-title-5.bg-dark:first-child {
  height: 200px;
  padding-top: 55px;
}


.circle {
	border-radius:50%;
}
.not-in-office{
	background: red;
}
.in-office{
	background: green;
}

.office{
	margin-bottom:0;
}
.img-circle {
	width:100px;
	height:100px;
    border-radius: 50%;
	display:inline-block;
	position:absolute;
}

.overlay-status{
		width:100px;
	height:100px;
    border-radius: 50%;
	display:inline-block;
	opacity:0.2;
	float:none;
	display:block;
}

